Bootstrap alignment fixed

--- a/Lab-6/style.css
+++ b/Lab-6/style.css
@@ -12,7 +12,7 @@ gap: 30px;
 color: #fff;
 }
 .h{
-  width: 73%;
+  width: 100%;
   height: 0.1px;
   border: 0 none;
   background-color: rgba(255,255,255,0.25);
@@ -169,15 +169,13 @@ select{
 
 .container{
   display:grid;
-  height: 180vh;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1.5fr 1.5fr 1.5fr 1.5fr 1.5fr;
+  height: 80vh;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1.5fr 1.5fr 1.5fr;
   grid-template-areas:
   "sidebar main main main"
   "sidebar main main main"
-  "sidebar main main main"
-  "content1 content2 content3 content4"
-  "content5 content6 content7 content7";
+  "sidebar main main main";
   grid-gap: 1.5rem;
 
 }
@@ -391,14 +389,12 @@ select{
 .container{
   display:grid;
   height: 180vh;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1.5fr 1.5fr 1.5fr 1.5fr 1.5fr;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1.5fr 1.5fr 1.5fr;
   grid-template-areas:
   "sidebar main main main"
   "sidebar main main main"
-  "sidebar main main main"
-  "content1 content2 content3 content4"
-  "content5 content6 content7 content7";
+  "sidebar main main main";
   grid-gap: 1.5rem;
 
 }
@@ -440,3 +436,4 @@ main{
   grid-area: content7;
 }
 
+}
